
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
typedef int u_long ;


 int UC (char) ;
 int htons (int ) ;
 int snprintf (char*,int,char*,int,int,int,int,int,int) ;

int
portnum2str(char *buf, int size, u_long ip, u_short port)
{
  char *p, *q;

  port = htons(port);
  p = (char *)&ip;
  q = (char *)&port;

  return (snprintf(buf, size, "%d,%d,%d,%d,%d,%d",
     UC(p[0]), UC(p[1]), UC(p[2]), UC(p[3]),
     UC(q[0]), UC(q[1])));
}
